--- a/web/src/org/trimatek/digideal/ui/messages_en.properties
+++ b/web/src/org/trimatek/digideal/ui/messages_en.properties
@@ -47,6 +47,7 @@ form_identified_by = identified by
 form_the_buyer = the buyer
 form_the_agent = the agent
 form_wizard = Wizard: 
+form_fee = including fees of
 wizard_whom = Whom
 wizard_how_much = How much
 wizard_condition = Condition
@@ -170,7 +171,7 @@ robot_right_arrow=\uD83D\uDC49
 robot_finish=\uD83C\uDFC1
 robot_subtitle = How to use it?
 robot_fee = How much does it cost?
-robot_fee_detail = In step 7, DigiBot validates the receipt code and unlocks the funds. In this transaction, it charges its services by subtracting from the amount in custody, a value equal to the commission charged by a miner to process that transaction of 1 entry and 2 exits (approximately US$ 1.15).
+robot_fee_detail = In step 7, DigiBot validates the receipt code and unlocks the funds. In this transaction, it charges its services by subtracting from the amount in custody, a value equal to the fee charged by a miner to process that transaction of 1 entry and 2 exits (approximately US$ 
 cases_subtitle= Some examples
 cases_c1_title= Painting works
 cases_c1_text1= @Alice needs some painting works in her house and @Bob, the painter, doesn't want to have difficulties to get paid. So a DigiDeal is created, Alice sends funds and Bob starts the job without hesitation. Once the work is done, Alice shows the receipt code to Bob and everybody is happy!
@@ -187,9 +188,9 @@ faq_g1_title = Cost
 faq_g1_title1 = What is the charge paid by the buyer?
 faq_g1_text1 = The buyer should only be responsible for the cost of the transaction to send the funds.
 faq_g1_title2 = What extra charge should the seller pay?
-faq_g1_text2 = When unlocking the funds in custody, the cost of the transaction is paid to the miner and the same amount is paid, as commission for DigiDeal (approximately US$ 1.15).
+faq_g1_text2 = When unlocking the funds in custody, the cost of the transaction is paid to the miner and the same amount is paid, as fee for DigiDeal (approximately US$ 
 faq_g1_title3 = Is the DigiDeal charge fixed?
-faq_g1_text3 = Always, even if the agreement is for US$ 10 or US $10.000, the DigiDeal commission will always be the same. The same fee a miner charges to process the payment transaction (step 7 of the <a target="_blank" style="color: #1da1f2;" href="./robot.xhtml">process</a>).
+faq_g1_text3 = Always, even if the agreement is for US$ 10 or US$ 10.000, the DigiDeal fee will always be the same. The same fee a miner charges to process the payment transaction (step 7 of the <a target="_blank" style="color: #1da1f2;" href="./robot.xhtml">process</a>).
 faq_g2_title = Technology
 faq_g2_title1 = Why is DigiDeal innovative?
 faq_g2_text1 = Because during the normal process of agreement, there is no human intervention. The actions of the participants are evaluated by algorithms that decide if the environment is adjusted to what is defined in the agreement.
@@ -241,7 +242,7 @@ currency_required = required
 terms_link = To show terms and conditions, click 
 terms_accept = I accept 
 terms_button = here
-terms_text = DigiDeal is an autonomous service guided by the definitions of the agreement and the actions of the participants. Under normal conditions, there is never human intervention, the whole process is guided by algorithms according to the definitions of the agreement between the parties. The transferred funds are the property of the buyer until the seller sends the receipt code. In case the seller could not demonstrate compliance with the agreement, the funds would be returned to the buyer. The agent will always charge, as a commission, the same amount as the miner's commission that confirms the payment transaction.
+terms_text = DigiDeal is an autonomous service guided by the definitions of the agreement and the actions of the participants. Under normal conditions, there is never human intervention, the whole process is guided by algorithms according to the definitions of the agreement between the parties. The transferred funds are the property of the buyer until the seller sends the receipt code. In case the seller could not demonstrate compliance with the agreement, the funds would be returned to the buyer. The agent will always charge, as a fee, the same amount as the miner's fee that confirms the payment transaction.
 og_description = A Bitcoin-based service to contemporize agreements between people
 alert_screen_title = Screen
 alert_screen_text = In this Beta version, the recommended minimum width to complete the form is 1200 pixels, that is, a typical laptop screen.
