--- a/web/src/org/trimatek/digideal/ui/messages_es.properties
+++ b/web/src/org/trimatek/digideal/ui/messages_es.properties
@@ -47,6 +47,7 @@ form_identified_by = identificado por
 form_the_buyer = el comprador
 form_the_agent = el agente
 form_wizard = Asistente: 
+form_fee = incluyendo comisiones de
 wizard_whom = Quiénes
 wizard_how_much = Cuánto
 wizard_condition = Condición
@@ -170,7 +171,7 @@ robot_right_arrow=\uD83D\uDC49
 robot_finish=\uD83C\uDFC1
 robot_subtitle = ¿Cómo se usa?
 robot_fee = ¿Qué costo tiene?
-robot_fee_detail = En el paso 7, DigiBot valida el código de recibo y desbloquea los fondos. En esa transacción cobra sus servicios restando de la cifra en custodia, un valor igual a la comisión que cobra un minero para procesar esa transacción de 1 entrada y 2 salidas (aproximadamente US$ 1.15).
+robot_fee_detail = En el paso 7, DigiBot valida el código de recibo y desbloquea los fondos. En esa transacción cobra sus servicios restando de la cifra en custodia, un valor igual a la comisión que cobra un minero para procesar esa transacción de 1 entrada y 2 salidas (aproximadamente US$ 
 cases_subtitle= Algunos ejemplos
 cases_c1_title= Pintura
 cases_c1_text1= @Andrea necesita hacer trabajos de pintura en su casa y @Bruno, el pintor, no quiere tener dificultades para cobrar su trabajo. Entonces se crea un DigiDeal, Andrea envía los fondos y así Bruno comienza a pintar tranquilo. Una vez completado el trabajo, Andrea muestra el código de recibo a Bruno y todos contentos!
@@ -187,7 +188,7 @@ faq_g1_title = Costo
 faq_g1_title1 = ¿Cuánto de adicional paga el comprador? 
 faq_g1_text1 = El comprador sólo debe hacerse cargo del costo de la transacción para enviar los fondos.
 faq_g1_title2 = ¿Qué cargo extra debe pagar el vendedor?
-faq_g1_text2 = Al desbloquear los fondos en custodia, se paga el costo de la transacción al minero y la misma cifra, como comisión para DigiDeal (aproximadamente US$ 1.15).
+faq_g1_text2 = Al desbloquear los fondos en custodia, se paga el costo de la transacción al minero y la misma cifra, como comisión para DigiDeal (aproximadamente US$ 
 faq_g1_title3 = ¿El cargo de DigiDeal es fijo?
 faq_g1_text3 = Siempre, por más que el acuerdo sea por US$ 10 ó US$ 10.000 la comisión de DigiDeal siempre será la misma. El mismo cargo (fee) que cobra un minero para procesar la transacción de pago (paso 7 del <a target="_blank" style="color: #1da1f2;" href="./robot.xhtml">proceso</a>).
 faq_g2_title = Tecnología
