--- a/web/src/org/trimatek/digideal/ui/messages_pt.properties
+++ b/web/src/org/trimatek/digideal/ui/messages_pt.properties
@@ -47,6 +47,7 @@ form_identified_by = identificado por
 form_the_buyer = o comprador
 form_the_agent = o agente
 form_wizard = Assistente: 
+form_fee = incluindo taxas de
 wizard_whom = O qual
 wizard_how_much = Quantos
 wizard_condition = Condição
@@ -170,7 +171,7 @@ robot_right_arrow=\uD83D\uDC49
 robot_finish=\uD83C\uDFC1
 robot_subtitle = Como se usa?
 robot_fee = Quanto custa?
-robot_fee_detail = Na etapa 7, DigiBot valida o código de recebimento e desbloqueia os fundos. Nesta transação, ele cobra seus serviços subtraindo do a quantidade em custódia, um valor igual à comissão cobrada por um minerador para processar aquela transação de 1 entrada e 2 saídas (aproximadamente US$ 1.15).
+robot_fee_detail = Na etapa 7, DigiBot valida o código de recebimento e desbloqueia os fundos. Nesta transação, ele cobra seus serviços subtraindo do a quantidade em custódia, um valor igual à comissão cobrada por um minerador para processar aquela transação de 1 entrada e 2 saídas (aproximadamente US$ 
 cases_subtitle= Alguns exemplos
 cases_c1_title= Trabalhos de pintura
 cases_c1_text1= @Anita precisa de alguns trabalhos de pintura em sua casa e @João, o pintor, não quer ter dificuldades para receber o pagamento. Então, um DigiDeal é criado, Anita envia fundos e João inicia o trabalho sem dúvida. Quando o trabalho estiver concluído, Anita mostrará o código de recibo para João e todos ficarão felizes!
@@ -187,7 +188,7 @@ faq_g1_title = Costo
 faq_g1_title1 = Qual é a taxa paga pelo comprador?
 faq_g1_text1 = O comprador só deve ser responsável pelo custo da transação para enviar os fundos.
 faq_g1_title2 = Qual o custo extra que o vendedor deve pagar?
-faq_g1_text2 = Ao desbloquear os fundos em custódia, o custo da transação é pago à minerador e o mesmo valor é pago, como comissão pela DigiDeal (aproximadamente US$ 1.15). 
+faq_g1_text2 = Ao desbloquear os fundos em custódia, o custo da transação é pago à minerador e o mesmo valor é pago, como comissão pela DigiDeal (aproximadamente US$  
 faq_g1_title3 = O custo do DigiDeal é fixo?
 faq_g1_text3 = Sempre, mesmo que o  seja de US$ 10 ou US$ 10.000, a comissão do DigiDeal será sempre a mesma. A mesma taxa (fee) que o mineiro cobra para processar a transação de pagamento (etapa 7 do <a target="_blank" style="color: #1da1f2;" href="./robot.xhtml">processo</a>).
 faq_g2_title = Tecnologia
